# RapidOCR_NG

./: CMakeLists.txt  README.md
common/: commonfunc.h
include/: precomp.h  rpbidi.h  rpcommonfunc.h  rpexcept.h  rpocrconst.h  rpocrdef.h  rpuniocr_api.h  rpwinfunc.h
models/: mongolian_keys.txt  readme.md  tibetan_keys.txt  uighur_keys.txt
ocr/: rpocrcls.cpp  rpocrcls.h  rpocrconst.cpp  rpocrdet.cpp  rpocrdet.h  rpocrrec.cpp  rpocrrec.h  rpuniocrobj.cpp  rpuniocrobj.h
prepro/: clipper.cpp  postprocess_op.cpp  postprocess_op.h  preprocess_op.cpp  preprocess_op.h  utility.cpp  utility.h
sources/: RpUniOCR.rc  resource.h  rpuniocr_api.cpp  uniocr_test.cpp
